minor style improvements, fix bug when opening popup from map on mobile

--- a/assets/scss/tour.scss
+++ b/assets/scss/tour.scss
@@ -226,7 +226,7 @@ body {
         }
     }
     .has-dialog {
-        #map-nav {
+        #map-nav, #map, .zoom-btns {
             display: none;
         }
     }
